--- a/Status/Status.csproj
+++ b/Status/Status.csproj
@@ -66,14 +66,14 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="1.png" />
-    <Content Include="2.png" />
-    <Content Include="3.png" />
-    <Content Include="4.png" />
-    <Content Include="5.png" />
-    <Content Include="6.png" />
-    <Content Include="7.png" />
-    <Content Include="8.png" />
+    <Content Include="Images\1.png" />
+    <Content Include="Images\2.png" />
+    <Content Include="Images\3.png" />
+    <Content Include="Images\4.png" />
+    <Content Include="Images\5.png" />
+    <Content Include="Images\6.png" />
+    <Content Include="Images\7.png" />
+    <Content Include="Images\8.png" />
     <Content Include="index.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
