--- a/Status/Web.config
+++ b/Status/Web.config
@@ -8,4 +8,9 @@
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
   </system.web>
+<configuration>
+    <system.web>
+        <customErrors mode="Off"/>
+    </system.web>
+</configuration>
 </configuration>
